--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^4.3.0",
     "cssnano": "^4.1.10",
+    "glob": "^7.1.6",
     "html-webpack-plugin": "^4.5.0",
     "less": "^3.12.2",
     "less-loader": "^7.0.1",
